--- a/tests/Makefile.servo
+++ b/tests/Makefile.servo
@@ -37,7 +37,7 @@ HEX_EEPROM_FLAGS += --change-section-lma .eeprom=0 --no-change-warnings
 
 
 ## Objects that must be built in order to link
-OBJECTS = servo.o swuart.o
+OBJECTS = servo.o rs232-swuart.o
 
 ## Objects explicitly added by the user
 LINKONLYOBJECTS = 
@@ -50,7 +50,7 @@ all: $(TARGET) servo.hex
 servo.o: servo.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
-swuart.o: swuart.c
+rs232-swuart.o: rs232-swuart.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 ##Link
