--- a/tests/Makefile.twi
+++ b/tests/Makefile.twi
@@ -37,7 +37,7 @@ HEX_EEPROM_FLAGS += --change-section-lma .eeprom=0 --no-change-warnings
 
 
 ## Objects that must be built in order to link
-OBJECTS = twi-server.o servo.o swuart.o rs485.o
+OBJECTS = twi-server.o servo.o rs232-swuart.o rs485-usart.o
 
 ## Objects explicitly added by the user
 LINKONLYOBJECTS = 
@@ -53,10 +53,10 @@ twi-server.o: twi-server.c juice.h
 servo.o: servo.c juice.h
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
-swuart.o: swuart.c juice.h
+rs232-swuart.o: rs232-swuart.c juice.h
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
-rs485.o: rs485.c juice.h
+rs485-usart.o: rs485-usart.c juice.h
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 
