--- a/tests/Makefile.twi
+++ b/tests/Makefile.twi
@@ -82,6 +82,8 @@ size: $(TARGET).elf
 clean:
 	-rm -rf $(OBJECTS) dep/* $(TARGET).elf $(TARGET).hex $(TARGET).eep $(TARGET).lss $(TARGET).map *~
 
+flashinstall: $(TARGET).hex
+	/usr/sbin/i2cset -y 0 0x48 0xb0 0x0d ; sleep 1 ; /usr/local/bin/twiboot -a 0x29 -w flash:$(TARGET).hex
 
 ## Other dependencies
 -include $(shell mkdir dep 2>/dev/null) $(wildcard dep/*)
