Added second example2 of joystick to ADC to servo1.

--- a/c_example/Makefile
+++ b/c_example/Makefile
@@ -5,19 +5,24 @@ CC=gcc
 CFLAGS=-c -Wall
 LDFLAGS=
 
-SOURCES=example1.c lib-juice.c
+SOURCES=example1.c example2.c lib-juice.c
 OBJECTS=$(SOURCES:.cpp=.o)
-TARGET=example1
+TARGETS=example1 example2
 
-all: $(SOURCES) $(TARGET)
+example1_objects= example1.o lib-juice.o
+example2_objects= example2.o lib-juice.o
 
-$(TARGET): $(OBJECTS) 
-	$(CC) $(LDFLAGS) $(OBJECTS) -o $@
+
+all: $(SOURCES) $(TARGETS)
+
+example1: $(example1_objects)
+	$(CC) $(LDFLAGS) $(example1_objects) -o $@
+
+example2: $(example2_objects)
+	$(CC) $(LDFLAGS) $(example2_objects) -o $@
 
 .cpp.o:
 	$(CC) $(CFLAGS) $< -o $@
 
 clean:
-	-rm -rf $(TARGET)
-
-
+	-rm -rf $(TARGETS) $(example1_objects) $(example2_objects)
