Added some CPLD updates to DAQ for comms ports testing of Juice.

--- a/tests/rpidaq/Makefile
+++ b/tests/rpidaq/Makefile
@@ -7,7 +7,7 @@ LDFLAGS=
 
 TARGET=jj
 
-SOURCES=rpidaq.c lib-lcd.c
+SOURCES=rpi-daq.c lib-lcd.c
 OBJECTS=$(SOURCES:.c=.o)
 
 all: $(SOURCES) $(TARGET)
