--- a/tests/rpidaq/Makefile
+++ b/tests/rpidaq/Makefile
@@ -1,13 +1,18 @@
 ###############################################################################
 # Makefile for the juice-test
 ###############################################################################
-CC=gcc
-CFLAGS=-c -Wall -I../c_examples
-LDFLAGS=
+CC = gcc
+CFLAGS = -c -Wall -I../c_examples -DJUICE_JIG
+LDFLAGS =
 
-TARGET=jj
+TARGET = jj
 
-SOURCES=juice-jig.c rpi-daq.c rpi-daq.h lib-lcd.c lib-juice.c lib-juice.h
+SOURCES = juice-jig.c juice-jig.h \
+	rpi-daq.c rpi-daq.h \
+	lib-lcd.c lib-juice.c lib-juice.h \
+	mcp342x.h mcp342x.c \
+	jig-avr.c
+	
 OBJECTS=$(SOURCES:.c=.o)
 
 all: $(SOURCES) $(TARGET)
@@ -20,5 +25,3 @@ $(TARGET): $(OBJECTS)
 
 clean:
 	-rm -rf $(TARGET) *.o *~
-
-
