--- a/tests/rpidaq/Makefile
+++ b/tests/rpidaq/Makefile
@@ -25,3 +25,27 @@ $(TARGET): $(OBJECTS)
 
 clean:
 	-rm -rf $(TARGET) *.o *~
+
+
+
+
+#### HAHAHAH
+ball: svc-tests.elf svc-tests.hex 
+
+bclean:
+	rm -f svc-tests.elf svc-tests.hex *~
+
+svc-tests.hex: svc-tests.elf
+	avr-objcopy -O ihex -R .eeprom -R .fuse -R .lock -R .signature svc-tests.elf svc-tests.hex
+#	avr-objcopy -O ihex svc-tests.elf svc-tests.hex
+
+svc-tests.elf: svc-tests.c juice.h
+	avr-gcc -mmcu=atmega168a -Wall -Os -gdwarf-2 -std=gnu99 \
+	-funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums \
+	-DF_CPU=14745600UL -DSTANDALONE_UART_TEST \
+	-o svc-tests.elf svc-tests.c
+
+binstall: svc-tests.hex
+	/usr/bin/i2cset -y 0 0x48 0xb0 0x0d ; sleep 0.5 ; \
+	/usr/local/bin/twiboot -d /dev/i2c-0 -a 0x29 -w flash:svc-tests.hex
+
