Added more code for comms ports test. Console RS232 port is Ok. AVR232 is half-complete, no comparisons yet.

--- a/tests/rpidaq/Makefile
+++ b/tests/rpidaq/Makefile
@@ -11,6 +11,7 @@ SOURCES = juice-jig.c juice-jig.h \
 	rpi-daq.c rpi-daq.h \
 	lib-lcd.c lib-juice.c lib-juice.h \
 	mcp342x.h mcp342x.c \
+	juice-comtests.c \
 	jig-avr.c
 	
 OBJECTS=$(SOURCES:.c=.o)
